tests/files/type_checker_tests/should_pass/362.cmdr
//Should allow lambda recursion
a = fn (b) -> {
	return b();
};
a(a);
