tests/files/type_checker_tests/should_fail/229.cmdr
//Should fail on calling undeclared lambda
a = fn () -> {
	return a();
}
